Fix clipping problem
An empty image source causes the dom to render an empty image with a
white border. I created a blank image in GIMP and used it as the
placeholder for the img. This seems to be the best workaround. The
previous img src is now the background image url for the img container.

--- a/Excursion-Node/excursion-react/src/index.css
+++ b/Excursion-Node/excursion-react/src/index.css
@@ -712,6 +712,12 @@ table {
     color: white;
 }
 
+.choose-path .panel {
+    border: 0;
+    border-radius: 4px;
+    box-shadow: 0 6px 10px 0 rgba(0,0,0,0.14), 0 1px 18px 0 rgba(0,0,0,0.12), 0 3px 5px 0 rgba(0,0,0,0.2);
+}
+
 .choose-path h1 {
     margin-left: 2%;
     font-size: 48px;
@@ -728,16 +734,24 @@ table {
 }
 
 .choose-path img {
-    border: 2px solid #44C0FF;
     border-radius: 50%;
     border-width: medium;
     padding: 30px;
     background-clip: border-box;
     height: 150px;
     width: 150px;
-    /*background-image: url("./screen_1_0_advertising_icon.svg");
-    background-size: cover;
-    background-position: center;*/
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.icon-speaker {
+    background-image: url("./screen_1_0_advertising_icon.svg");
+    border: 2px solid #44C0FF;
+}
+
+.icon-phone {
+    background-image: url("./screen_1_0_monetize_icon.svg");
+    border: 2px solid white;
 }
 
 .choose-path-panel {
@@ -750,36 +764,14 @@ table {
     padding-top: 50px;
     height: 500px;
     border: none;
-	/*border: 2px solid #44C0FF;*/
-	/*border-radius: 4px;*/
-	/*box-shadow: 0 6px 10px 0 rgba(0,0,0,0.14), 0 1px 18px 0 rgba(0,0,0,0.12), 0 3px 5px 0 rgba(0,0,0,0.2);*/
 }
 
 .choose-path-panel:hover .panel-body:hover {
 	border: 2px solid #44C0FF;
+    border-radius: 4px;
     padding-top: 50px;
     margin: -2px;
-    /*padding: 0px;*/
-    /*padding-top: 50px;*/
-	/*border-radius: 4px;*/
-	/*box-shadow: 0 6px 10px 0 rgba(0,0,0,0.14), 0 1px 18px 0 rgba(0,0,0,0.12), 0 3px 5px 0 rgba(0,0,0,0.2);*/
-    box-shadow: inset 0 0 0 4px #2098D1, 0 0 1px transparent;
 }
-
-/*.hvr-border-fade {
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px transparent;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: box-shadow;
-  transition-property: box-shadow;
-  box-shadow: inset 0 0 0 4px #e1e1e1, 0 0 1px transparent;
-}*/
-/*.hvr-border-fade:hover, .hvr-border-fade:focus, .hvr-border-fade:active {
-  box-shadow: inset 0 0 0 4px #2098D1, 0 0 1px transparent;
-}*/
 
 .choose-path-panel p {
     margin-left: 0%;
